Timer ~ Body Overflow Fix
Fix bug that caused iOS to display overflowing body content even when
‘overflow’ was set to ‘hidden’

--- a/scss/timer.scss
+++ b/scss/timer.scss
@@ -12,6 +12,7 @@ $active_transition_time: 0.1s;
 
 body {
     background-color: $main_color;
+    position: relative;
     overflow: hidden;
     -webkit-user-select: none;
 }
